# euos25

./: .gitignore  LICENSE  README.md  pyproject.toml  submission.csv
data/challenge/: euos25_challenge_test.csv  euos25_challenge_train_fluorescence340_450.csv  euos25_challenge_train_fluorescence480.csv  euos25_challenge_train_transmittance340.csv  euos25_challenge_train_transmittance450.csv  euos_challenge_2025_leaderboard.csv
data/derived/: df_leaderboard.csv  df_test.csv
euos25/: __init__.py  paths.py  test.py
euos25/data/: __init__.py  lightning_dataset_wrapper.py  plates.py  process_data.py  round_robin_batch_sampler.py  test.ipynb  tox25_dataset.py
euos25/ensemble/: build_final_predictions.py  config.py  model_1.py  model_2.py  model_3.py  model_4.py  model_5.py
euos25/models/: __init__.py  gin.py  matrix_factorization.py  neumf.py
euos25/training/: __init__.py  matrix_factorization_training.py  neumf_training.py  training.py
models/model_1/0/: epoch=160-step=5957.ckpt  eval_metrics.csv  predictions_oof.csv  predictions_submission.csv  submission.csv
models/model_1/1/: epoch=98-step=3663.ckpt  eval_metrics.csv  predictions_oof.csv  predictions_submission.csv  submission.csv
models/model_1/2/: epoch=202-step=7511.ckpt  eval_metrics.csv  predictions_oof.csv  predictions_submission.csv  submission.csv
models/model_1/3/: epoch=71-step=2664.ckpt  eval_metrics.csv  predictions_oof.csv  predictions_submission.csv  submission.csv
models/model_1/4/: epoch=109-step=4070.ckpt  eval_metrics.csv  predictions_oof.csv  predictions_submission.csv  (+1 more)
(+170 files in other folders)
