[project]
name = "euos25"
version = "0.1.0"
description = ""
authors = [
    { name = "Steffen Hirte", email = "shirte@users.noreply.github.com" },
    { name = "Konrad Diedrich", email = "KdDiedrich@users.noreply.github.com" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = ">=2.3.3,<3.0.0"
rdkit = ">=2025.9.1,<2026.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
tqdm = ">=4.67.1,<5.0.0"
lightgbm = ">=4.6.0,<5.0.0"
requests = ">=2.32.5,<3.0.0"
torch = { version = "2.8", source = "pytorch-cuda-126" }
ogb = ">=1.3.6,<2.0.0"
wandb = ">=0.23.1,<0.24.0"
torchvision = { version = "0.23", source = "pytorch-cuda-126" }
lightning = "^2.6.0"
torch-geometric = "^2.7.0"
loguru = "^0.7.3"

[[tool.poetry.source]]
name = "pytorch-cuda-126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
